[project]
name = "coldstart"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taku Fukada", email = "naninunenor@gmail.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]
