[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taku Fukada", email = "naninunenor@gmail.com" }
]
dependencies = [
    "gunicorn>=22.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

# [project.scripts]
# "hello" = "hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
devserver = "uvicorn hello:app --workers 1 --port 8080"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]
